--- a/templates/ferm.conf.j2
+++ b/templates/ferm.conf.j2
@@ -1,40 +1,3 @@
 # {{ ansible_managed }}
 
-{% if ferm_variables %}
-{% for variable_name, variable_value in ferm_variables.items() %}
-@def ${{ variable_name }} = {{ variable_value is string | ternary(variable_value, ('(%s)' % variable_value | join(' '))) }};
-{% endfor %}
-
-{% endif %}
-table filter {
-
-    chain INPUT {
-        policy {{ ferm_filter_input_policy }};
-{% if ferm_filter_input_fules %}
-
-{% for rule in ferm_filter_input_fules %}
-        {{ rule }}
-{% endfor %}
-{% endif %}
-    }
-
-    chain OUTPUT {
-        policy {{ ferm_filter_output_policy }};
-{% if ferm_filter_output_fules %}
-
-{% for rule in ferm_filter_output_fules %}
-        {{ rule }}
-{% endfor %}
-{% endif %}
-    }
-
-    chain FORWARD {
-        policy {{ ferm_filter_forward_policy }};
-{% if ferm_filter_forward_fules %}
-
-{% for rule in ferm_filter_forward_fules %}
-        {{ rule }}
-{% endfor %}
-{% endif %}
-    }
-}
+{{ ferm_config }}
